--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> <link href="https://fonts.googleapis.com/css?family=Yantramanav" rel="stylesheet">
   <title>Frontend JS</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="app.js"></script>
+  <h1>Cats are not as cute as dogs</h1>
 </head>
 <body>
   <section id="cats">
